2007-11-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/TranslationProject.cs: gettext addin now only scans
	  code files for translations.

2007-11-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
	  MonoDevelop.Gettext/TranslationProject.cs,
	  MonoDevelop.Gettext/Catalog.cs: Added some gui update code.

2007-11-16  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  gtk-gui/MonoDevelop.Gettext.Editor.CatalogHeadersWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs,
	  MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
	  MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs,
	  MonoDevelop.Gettext/CatalogParser.cs: The gettext addin now uses
	  xgettext and msgmerge command line tools instead of custom routines.
	  Fixed some bugs in the po editor and catalog parser.

2007-11-15  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  gtk-gui/gui.stetic: Updated.
	* MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs: Moved
	  code for updating translation to TranslationProject.
	* MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs,
	  MonoDevelop.Gettext/Catalog.cs,
	  MonoDevelop.Gettext.Editor/CatalogEditor.cs: Use progress monitors to
	  report errors.
	* MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs: Create a new
	  configuration if none exist.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Gettext/TranslationService.cs, MonoDevelop.Gettext/Catalog.cs:
	  Track LoggingService API changes.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 
